- Fixed bug #50162 (Memory leak when fetching timestamp column from Oracle database) - Fixed bug #34852 (Failure in odbc_exec() using oracle-supplied odbc driver) (patch by tim dot tassonis at trivadis dot com)